# IMPR-eksamen

./: CMakeLists.txt  char-graphics.c  char-graphics.h  doWhileIterativeKontrolstrukturer.c  forLoekke.c  funktioner2GradsLigning.c  handin1.c  ifElseLeapYear.c  kodeTekst2.c  kodeTest.c  kodeTest3.c  kodeTest4.c  kodeTestRecursive.c  kodetestcasebreak.c  lektion2-opg9-124YardLength.c  lektion2Pythagoras.c  lektion3-opg3-1-Cirkel.c  lektion5PrintMatchGirl.c  lektion7_Array.c  lektion7_ArrayMedPointer.c  quiz.c  triangleTest.c
imprSemester1/: CMakeLists.txt  char-graphics.c  char-graphics.h  doWhileIterativeKontrolstrukturer.c  forLoekke.c  funktioner2GradsLigning.c  handin1.c  ifElseLeapYear.c  lektion2-opg9-124YardLength.c  lektion2Pythagoras.c  lektion3-opg3-1-Cirkel.c  lektion5PrintMatchGirl.c  lektion7_Array.c  lektion7_ArrayMedPointer.c  quiz.c  switch7StepGrade.c
