cmake_minimum_required(VERSION 3.23)
project(imprSemester1 C)

set(CMAKE_C_STANDARD 99)

add_executable(switch7StepGrade.c switch7StepGrade.c)
add_executable(ifElseLeapYear.c ifElseLeapYear.c)
add_executable(doWhileIterativeKontrolstrukturer.c doWhileIterativeKontrolstrukturer.c)
add_executable(forLoekke.c forLoekke.c)
add_executable(funktioner2GradsLigning.c funktioner2GradsLigning.c)
add_executable(lektion2Pythagoras.c lektion2Pythagoras.c)
add_executable(lektion2-opg9-124YardLength.c lektion2-opg9-124YardLength.c)
add_executable(lektion5PrintMatchGirl.c lektion5PrintMatchGirl.c char-graphics.c char-graphics.c)
add_executable(handin1.c handin1.c)
add_executable(lektion3-opg3-1-Cirkel.c lektion3-opg3-1-Cirkel.c)
add_executable(lektion7_Array.c lektion7_Array.c)
add_executable(lektion7_ArrayMedPointer.c lektion7_ArrayMedPointer.c)
add_executable(quiz.c quiz.c)